; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_compile.c_zend_assert_valid_class_name.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_compile.c_zend_assert_valid_class_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@E_COMPILE_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"Cannot use '%s' as class name as it is reserved\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zend_assert_valid_class_name(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i64 @zend_is_reserved_class_name(i32* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i32, i32* @E_COMPILE_ERROR, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @ZSTR_VAL(i32* %8)
  %10 = call i32 @zend_error_noreturn(i32 %7, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %9)
  br label %11

11:                                               ; preds = %6, %1
  ret void
}

declare dso_local i64 @zend_is_reserved_class_name(i32*) #1

declare dso_local i32 @zend_error_noreturn(i32, i8*, i32) #1

declare dso_local i32 @ZSTR_VAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
